- change message style dark mode (correct)

--- a/_sass/_message.scss
+++ b/_sass/_message.scss
@@ -13,7 +13,9 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  background-color: #606060;
-  color: var(--gray-300);
-  border-left: 8px #ddd solid;
+  .message {
+    background-color: #606060;
+    color: var(--gray-300);
+    border-left: 8px #ddd solid;
+  }
 }
